--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
