ngnix and dockerfile improved in build and also improve caching in the dasbaord analitics page

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,28 @@
 server {
-  listen 80;
-  server_name _;
+    listen 80;
+    server_name _;
 
-  root /usr/share/nginx/html;
-  index index.html;
+    root /usr/share/nginx/html;
+    index index.html;
 
-  location / {
-    try_files $uri /index.html;
-  }
+    gzip on;
+    gzip_types text/plain application/javascript text/css application/json text/html;
+    gzip_min_length 256;
+    gzip_vary on;
 
-  # Optional: for better caching
-  location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2?)$ {
-    expires 6M;
-    access_log off;
-    add_header Cache-Control "public";
-  }
+    location / {
+        try_files $uri /index.html;
+    }
+
+    # Cache static assets
+    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2?)$ {
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Do not cache index.html
+    location = /index.html {
+        add_header Cache-Control "no-cache";
+    }
 }
