--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,8 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -28,13 +27,13 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Pull Docker Image
+      - name: Pull Docker
         run: docker pull inspire2002/vandan_frontend:latest
 
-      - name: Remove old container
+      - name: Stop old container
         run: docker rm -f vandan_frontend_app || true
 
-      - name: Run Docker Container
+      - name: Run container
         run: |
           docker run -d \
             -p 4000:80 \
