--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,18 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    gzip on;
-    gzip_types text/plain application/javascript text/css application/json text/html;
-    gzip_min_length 256;
-    gzip_vary on;
-
+    # Frontend Routes
     location / {
         try_files $uri /index.html;
+    }
+
+    # API Reverse Proxy
+    location /api/ {
+        proxy_pass http://127.0.0.1:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
     }
 
     # Cache static assets
@@ -19,10 +24,5 @@ server {
         expires 6M;
         access_log off;
         add_header Cache-Control "public";
-    }
-
-    # Do not cache index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache";
     }
 }
