--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,7 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Source
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
@@ -27,13 +28,13 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      - name: Pull Docker
+      - name: Pull Docker Image
         run: docker pull inspire2002/vandan_frontend:latest
 
-      - name: Stop old container
+      - name: Remove old container
         run: docker rm -f vandan_frontend_app || true
 
-      - name: Run container
+      - name: Run Docker Container
         run: |
           docker run -d \
             -p 4000:80 \
