--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,36 +1,40 @@
-name: Deploy vandan_frontend
+name: Deploy_Vandan_Frontend
 
-on: 
+on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v4
-      - name: Login to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}     
+      - uses: actions/checkout@v4
+
+      - name: Login Docker
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build Docker Image
-        run: docker build -t inspire2002/vandan_frontend --build-arg REACT_APP_NODE_ENV='production' --build-arg REACT_APP_SERVER_BASE_URL='${{ secrets.REACT_APP_SERVER_BASE_URL }}'  .
-      - name: Publish Image to docker hub
-        run: docker push inspire2002/vandan_frontend:latest 
- 
+        run: |
+          docker build \
+            --build-arg VITE_API_BASE_URL="/api" \
+            -t inspire2002/vandan_frontend:latest .
+
+      - name: Push Docker Image
+        run: docker push inspire2002/vandan_frontend:latest
+
   deploy:
     needs: build
-    runs-on: self-hosted 
+    runs-on: self-hosted
     steps:
-      - name: Pull image from docker hub
-        run: docker pull inspire2002/vandan_frontend:latest 
-      - name: Delete old container
-        run: docker rm -f vandan_frontend_app
-      - name: Run Docker Container
+      - name: Pull Docker Image
+        run: docker pull inspire2002/vandan_frontend:latest
+
+      - name: Remove old
+        run: docker rm -f vandan_frontend_app || true
+
+      - name: Run container
         run: |
           docker run -d \
-           -p 4000:80 \
-           --name vandan_frontend_app \
-           -e VITE_API_BASE_URL=http://44.197.21.241:8080 \
-           inspire2002/vandan_frontend:latest
-
+            -p 4000:80 \
+            --name vandan_frontend_app \
+            inspire2002/vandan_frontend:latest
