--- a/nginx.conf
+++ b/nginx.conf
@@ -5,24 +5,24 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    gzip on;
-    gzip_types text/plain application/javascript text/css application/json text/html;
-    gzip_min_length 256;
-    gzip_vary on;
-
+    # Frontend App (SPA)
     location / {
         try_files $uri /index.html;
+    }
+
+    # API Reverse Proxy
+    location /api/ {
+        proxy_pass http://44.197.21.241:8080/;  # your backend port
+
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     # Cache static assets
     location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|woff2?)$ {
         expires 6M;
         access_log off;
-        add_header Cache-Control "public";
-    }
-
-    # Do not cache index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache";
     }
 }
