--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
-    "jspdf": "^3.0.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
@@ -24,12 +30,16 @@
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.2.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/file-saver": "^2.0.7",
     "@types/html2canvas": "^0.5.35",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
